--- a/FinPlan.Web/Components/Pages/home.razor
+++ b/FinPlan.Web/Components/Pages/home.razor
@@ -68,6 +68,16 @@
     </div>
 </div>
 
+<div class="container my-5">
+    <div class="row justify-content-center">
+        <div class="col-lg-8 text-center">
+            <AdUnit Slot="home_bottom_responsive"
+                    Style="display:block; min-height: 120px;"
+                    PlaceholderText="Advertisement"></AdUnit>
+        </div>
+    </div>
+</div>
+
 <!-- Video Guide Section: compressed by default, can be maximized -->
 <div class="text-center my-4">
     <h4 class="mb-3" style="color:#1F6FEB; font-weight:700;">
