--- a/FinPlan.Web/Components/_Imports.razor
+++ b/FinPlan.Web/Components/_Imports.razor
@@ -11,5 +11,6 @@
 @using Microsoft.JSInterop
 @using FinPlan.Web
 @using FinPlan.Web.Components
+@using FinPlan.Web.Components.Shared
 @using FinPlan.Web.Components.Survey
 @using FinPlan.Web.Services
